# VrProject

./: .gitignore  README.md
mobile_app/: README.md  app.js  index.html  manifest.json  style.css
pc_app/: capture.py  config.py  encoder.py  gpu_encoder.py  gui.py  install.bat  main.py  requirements.txt  run.bat  server.py  test.bat  test.py
pc_app/temp_pynvjpeg/pynvjpeg-0.0.13/: nvjpeg-python.cpp
pc_app_cpp/: CMakeLists.txt  README.md  build.bat  gui.py  run.bat  run_gui.bat  setup_dependencies.ps1
pc_app_cpp/include/: vr_streamer.hpp
pc_app_cpp/include/capture/: dxgi_capture.hpp
pc_app_cpp/include/core/: common.hpp  config.hpp  memory_pool.hpp  spsc_queue.hpp  thread_pool.hpp
pc_app_cpp/include/encoder/: jpeg_encoder.hpp  stereo_processor.hpp
pc_app_cpp/include/network/: http_server.hpp  websocket_server.hpp
pc_app_cpp/src/: main.cpp
pc_app_cpp/src/capture/: dxgi_capture.cpp
pc_app_cpp/src/core/: config.cpp  vr_streamer_app.cpp
pc_app_cpp/src/encoder/: jpeg_encoder.cpp  stereo_processor.cpp  stereo_processor.cu
pc_app_cpp/src/network/: http_server.cpp  websocket_server.cpp
